--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "name": "code-settings-sync",
     "displayName": "Settings Sync",
-    "description": "Synchronize Settings, Snippets, launch, keybindings, workspaces and extensions Across Multiple Machines using Github Gist.",
-    "version": "2.5.1",
+    "description": "Synchronize Settings, Snippets, Themes, File Icons, Launch, Keybindings, Workspaces and Extensions Across Multiple Machines Using Github Gist.",
+    "version": "2.6.0",
     "icon": "images/cloud.png",
     "publisher": "Shan",
     "author": {
@@ -15,8 +15,7 @@
         "color": "#3B4859",
         "theme": "dark"
     },
-    "badges": [
-        {
+    "badges": [{
             "url": "https://vsmarketplacebadge.apphb.com/version/Shan.code-settings-sync.svg",
             "description": "Latest Version",
             "href": "https://marketplace.visualstudio.com/items?itemName=Shan.code-settings-sync"
@@ -46,7 +45,7 @@
         "email": "shanalikhan@hotmail.com"
     },
     "engines": {
-        "vscode": "^1.9.0"
+        "vscode": "^1.10.0"
     },
     "categories": [
         "Other"
@@ -68,8 +67,7 @@
     ],
     "main": "./out/src/extension",
     "contributes": {
-        "commands": [
-            {
+        "commands": [{
                 "command": "extension.HowSettings",
                 "title": "Sync : How To Configure"
             },
@@ -90,8 +88,7 @@
                 "title": "Sync : Advanced Options"
             }
         ],
-        "keybindings": [
-            {
+        "keybindings": [{
                 "key": "alt+shift+u",
                 "command": "extension.updateSettings",
                 "when": "editorTextFocus"
@@ -170,16 +167,16 @@
     },
     "devDependencies": {
         "typescript": "^2.1.4",
-        "vscode": "^1.0.3"
+        "vscode": "^1.0.5"
     },
     "dependencies": {
         "@types/node": "^6.0.58",
         "adm-zip": "^0.4.7",
         "fs": "^0.0.2",
-        "github": "^7.3.1",
+        "github": "^9.1.0",
         "ncp": "^2.0.0",
         "open": "^0.0.5",
-        "rimraf": "^2.5.4",
+        "rimraf": "^2.6.1",
         "temp": "^0.8.3",
         "https-proxy-agent": "^1.0.0",
         "chokidar": "^1.6.1"
