--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
         "email": "shanalikhan@hotmail.com"
     },
     "engines": {
-        "vscode": "^1.9.0"
+        "vscode": "^1.10.0"
     },
     "categories": [
         "Other"
@@ -163,14 +163,15 @@
     "scripts": {
         "vscode:prepublish": "tsc -p ./",
         "compile": "tsc -watch -p ./",
-        "postinstall": "node ./node_modules/vscode/bin/install"
+        "postinstall": "node ./node_modules/vscode/bin/install",
+        "test": "node ./node_modules/vscode/bin/test"
     },
     "devDependencies": {
         "typescript": "^2.1.4",
-        "vscode": "^1.0.3"
+        "vscode": "^1.0.3",
+        "@types/node": "^6.0.58"
     },
     "dependencies": {
-        "@types/node": "^6.0.58",
         "adm-zip": "^0.4.7",
         "fs": "^0.0.2",
         "github": "^9.1.0",
