--- a/package.json
+++ b/package.json
@@ -171,7 +171,7 @@
         "fs": "^0.0.2",
         "github": "^9.2.0",
         "ncp": "^2.0.0",
-        "open": "^0.0.5",
+        "opn": "5.0.0",
         "rimraf": "^2.6.1",
         "temp": "^0.8.3",
         "https-proxy-agent": "^1.0.0",
