--- a/package.json
+++ b/package.json
@@ -173,14 +173,12 @@
         }
     },
     "scripts": {
-        "vscode:prepublish": "npm install && npm run compile && npm prune --production",
-        "compile": "tsc -p ./",
+        "vscode:prepublish": "tsc -p ./",
+        "compile": "tsc -watch -p  ./",
         "postinstall": "node ./node_modules/vscode/bin/install",
         "test": "node ./node_modules/vscode/bin/test"
     },
     "devDependencies": {
-        "@types/mocha": "^2.2.48",
-        "mocha": "^5.0.1",
         "typescript": "^2.2.2",
         "vscode": "^1.1.0",
         "@types/node": "^9.4.1"
