update for travis CL

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,9 @@ node_js:
 before_install:
   - npm install npm@latest -g
   - npm install node-pre-gyp
-  - npm install
+  - npm i --no-optional
+  - npm dedupe
+  - npm up
   - npm install -g vsce
 
 install:
