--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
         "email": "shanalikhan@hotmail.com"
     },
     "engines": {
-        "vscode": "^1.15.0"
+        "vscode": "^1.8.0"
     },
     "categories": [
         "Other"
@@ -168,15 +168,15 @@
         }
     },
     "scripts": {
-        "vscode:prepublish": "tsc -p ./",
-        "compile": "tsc -watch -p  ./",
-        "postinstall": "node ./node_modules/vscode/bin/install",
-        "test": "node ./node_modules/vscode/bin/test"
+        "vscode:prepublish": "npm run compile",
+        "compile": "tsc -p ./",
+        "watch": "tsc -watch -p ./",
+        "postinstall": "node ./node_modules/vscode/bin/install"
     },
     "devDependencies": {
-        "typescript": "^2.2.2",
-        "vscode": "^1.1.0",
-        "@types/node": "^9.4.1"
+        "typescript": "^2.8.3",
+        "vscode": "^1.1.6",
+        "@types/node": "^10.0.0"
     },
     "dependencies": {
         "adm-zip": "^0.4.7",
