--- a/package.json
+++ b/package.json
@@ -176,10 +176,10 @@
     "devDependencies": {
         "typescript": "^2.8.3",
         "vscode": "^1.1.6",
-        "@types/node": "^10.0.0"
+        "@types/node": "^10.0.3"
     },
     "dependencies": {
-        "adm-zip": "^0.4.7",
+        "adm-zip": "0.4.7",
         "chokidar": "^2.0.2",
         "fs": "^0.0.2",
         "github": "^11.0.0",
