--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "code-settings-sync",
     "displayName": "Settings Sync",
     "description": "Synchronize Settings, Snippets, Themes, File Icons, Launch, Keybindings, Workspaces and Extensions Across Multiple Machines Using GitHub Gist.",
-    "version": "2.9.2",
+    "version": "3.0.0",
     "icon": "images/cloud.png",
     "publisher": "Shan",
     "author": {
@@ -15,8 +15,7 @@
         "color": "#3B4859",
         "theme": "dark"
     },
-    "badges": [
-        {
+    "badges": [{
             "url": "https://vsmarketplacebadge.apphb.com/version/Shan.code-settings-sync.svg",
             "description": "Latest Version",
             "href": "https://marketplace.visualstudio.com/items?itemName=Shan.code-settings-sync"
@@ -69,8 +68,7 @@
     ],
     "main": "./out/src/extension",
     "contributes": {
-        "commands": [
-            {
+        "commands": [{
                 "command": "extension.HowSettings",
                 "title": "%cmd.howSetting.title%"
             },
@@ -91,8 +89,7 @@
                 "title": "%cmd.otherOptions.title%"
             }
         ],
-        "keybindings": [
-            {
+        "keybindings": [{
                 "key": "alt+shift+u",
                 "command": "extension.updateSettings"
             },
