--- a/package.json
+++ b/package.json
@@ -171,12 +171,16 @@
         "vscode:prepublish": "npm run compile",
         "compile": "tsc -p ./",
         "watch": "tsc -watch -p ./",
-        "postinstall": "node ./node_modules/vscode/bin/install"
+        "postinstall": "node ./node_modules/vscode/bin/install",
+        "tslint-check": "tslint -c ./tslint.json ./src/**/*.ts"
     },
     "devDependencies": {
+        "@types/node": "^10.0.3",
+        "prettier": "^1.13.7",
+        "tslint": "^5.10.0",
+        "tslint-plugin-prettier": "^1.3.0",
         "typescript": "^2.8.3",
-        "vscode": "^1.1.6",
-        "@types/node": "^10.0.3"
+        "vscode": "^1.1.6"
     },
     "dependencies": {
         "adm-zip": "0.4.7",
