--- a/package.json
+++ b/package.json
@@ -172,7 +172,8 @@
         "compile": "tsc -p ./",
         "watch": "tsc -watch -p ./",
         "postinstall": "node ./node_modules/vscode/bin/install",
-        "tslint-check": "tslint -c ./tslint.json ./src/**/*.ts"
+        "tslint-check": "tslint -c ./tslint.json ./src/**/*.ts",
+        "format": "prettier --write './src/**/*.ts'"
     },
     "devDependencies": {
         "@types/node": "^10.0.3",
