--- a/package.json
+++ b/package.json
@@ -179,14 +179,14 @@
         "@types/fs-extra": "^5.0.4",
         "@types/node": "^10.0.3",
         "prettier": "^1.13.7",
-        "tslint": "^5.10.0",
+        "tslint": "^5.11.0",
         "tslint-plugin-prettier": "^1.3.0",
-        "typescript": "^2.8.3",
-        "vscode": "^1.1.6"
+        "typescript": "^2.9.2",
+        "vscode": "^1.1.18"
     },
     "dependencies": {
         "@octokit/rest": "^15.9.4",
-        "adm-zip": "0.4.7",
+        "adm-zip": "^0.4.11",
         "chokidar": "^2.0.2",
         "fs-extra": "^7.0.0",
         "https-proxy-agent": "^2.1.1",
