--- a/package.json
+++ b/package.json
@@ -190,7 +190,7 @@
         "chokidar": "^2.0.2",
         "fs-extra": "^7.0.0",
         "https-proxy-agent": "^2.1.1",
-        "proper-lockfile": "^2.0.1",
+        "lockfile": "^1.0.4",
         "temp": "^0.8.3"
     }
 }
