chore: not allow unuser locals and params. make it clean

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,9 @@
     "outDir": "out",
     "lib": ["es2015","es2016","es2017", "es2018", "esnext"],
     "sourceMap": true,
-    "rootDir": "."
+    "rootDir": ".",
+    "noUnusedLocals": true,
+    "noUnusedParameters": true
   },
   "exclude": ["node_modules", ".vscode-test"]
 }
