--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "activationEvents": [
         "*"
     ],
-    "main": "./out/src/extension",
+    "main": "./out/extension",
     "contributes": {
         "commands": [
             {
@@ -144,8 +144,9 @@
     },
     "scripts": {
         "vscode:prepublish": "npm run tslint-check && npm run compile",
-        "compile": "tsc -p ./",
-        "watch": "tsc -watch -p ./",
+        "compile": "webpack --mode production",
+        "compile:dev": "webpack --mode development",
+        "compile:watch": "webpack --mode development --watch",
         "postinstall": "node ./node_modules/vscode/bin/install",
         "tslint-check": "tslint -c ./tslint.json ./src/**/*.ts ./src/*.ts",
         "format": "prettier --write './src/**/*.ts'"
@@ -154,13 +155,16 @@
         "@types/fs-extra": "^5.0.4",
         "@types/node": "^10.7.0",
         "prettier": "^1.14.2",
+        "ts-loader": "^5.2.1",
         "tslint": "^5.11.0",
         "tslint-plugin-prettier": "^1.3.0",
         "typescript": "^3.0.1",
-        "vscode": "^1.1.21"
+        "vscode": "^1.1.21",
+        "webpack": "^4.20.2",
+        "webpack-cli": "^3.1.2"
     },
     "dependencies": {
-        "@octokit/rest": "^15.10.0",
+        "@octokit/rest": "15.10.0",
         "adm-zip": "^0.4.11",
         "chokidar": "^2.0.2",
         "fs-extra": "^7.0.0",
