--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
   "activationEvents": [
     "*"
   ],
-  "main": "./out/src/extension",
+  "main": "./out/extension.js",
   "contributes": {
     "commands": [
       {
@@ -143,26 +143,30 @@
     }
   },
   "scripts": {
-    "vscode:prepublish": "npm run tslint-check && npm run compile",
-    "compile": "tsc -p ./",
-    "watch": "tsc -watch -p ./",
+    "vscode:prepublish": "npm run tslint-check && webpack --mode production",
+    "compile": "webpack",
+    "watch": "webpack --mode development --watch",
     "postinstall": "node ./node_modules/vscode/bin/install",
     "tslint-check": "tslint -c ./tslint.json ./src/**/*.ts ./src/*.ts",
     "format": "prettier --write './src/**/*.ts'",
     "test": "npm run vscode:prepublish && node ./node_modules/bin/mocha --recursive"
   },
   "devDependencies": {
-    "@types/fs-extra": "^5.0.4",
-    "@types/node": "^10.12.10",
     "@types/chai": "4.1.7",
+    "@types/fs-extra": "^5.0.4",
     "@types/mocha": "^5.2.5",
+    "@types/node": "^10.12.10",
     "chai": "^4.2.0",
+    "clean-webpack-plugin": "^1.0.0",
     "mocha": "^5.2.0",
     "prettier": "^1.15.2",
+    "ts-loader": "^5.3.0",
     "tslint": "^5.11.0",
     "tslint-plugin-prettier": "^2.0.0",
     "typescript": "^3.1.2",
-    "vscode": "^1.1.21"
+    "vscode": "^1.1.21",
+    "webpack": "^4.26.1",
+    "webpack-cli": "^3.1.2"
   },
   "dependencies": {
     "@octokit/rest": "^16.0.1",
