--- a/package.json
+++ b/package.json
@@ -153,6 +153,7 @@
   },
   "devDependencies": {
     "@types/chai": "4.1.7",
+    "@types/chokidar": "^2.1.3",
     "@types/fs-extra": "^5.0.5",
     "@types/mocha": "^5.2.6",
     "@types/node": "^11.10.4",
@@ -171,6 +172,7 @@
   "dependencies": {
     "@octokit/rest": "^16.16.4",
     "adm-zip": "^0.4.13",
+    "chokidar": "^2.1.5",
     "fs-extra": "^7.0.1",
     "https-proxy-agent": "^2.2.1",
     "lockfile": "^1.0.4",
