--- a/package.json
+++ b/package.json
@@ -174,6 +174,7 @@
     "fs-extra": "^7.0.1",
     "https-proxy-agent": "^2.2.1",
     "lockfile": "^1.0.4",
+    "simple-git": "^1.110.0",
     "temp": "^0.9.0"
   }
 }
