--- a/package.json
+++ b/package.json
@@ -156,10 +156,12 @@
     "@types/chokidar": "^2.1.3",
     "@types/fs-extra": "^5.0.5",
     "@types/lockfile": "^1.0.1",
+    "@types/lodash": "^4.14.123",
     "@types/mocha": "^5.2.6",
     "@types/node": "^11.10.4",
     "chai": "^4.2.0",
     "clean-webpack-plugin": "^2.0.0",
+    "html-loader": "^0.5.5",
     "mocha": "^6.0.0",
     "prettier": "^1.16.4",
     "ts-loader": "^5.3.3",
@@ -177,6 +179,7 @@
     "fs-extra": "^7.0.1",
     "https-proxy-agent": "^2.2.1",
     "lockfile": "^1.0.4",
+    "lodash": "^4.17.11",
     "simple-git": "^1.110.0",
     "temp": "^0.9.0"
   }
